# kittycad.rs

./: .gitignore  CODEOWNERS  Cargo.toml  LICENSE  Makefile  README.md  add-issues-to-project.yml  flake.nix  kittycad.rs.patch.json  spec.json
.github/: dependabot.yml
.github/workflows/: cargo-build-types-only.yml  cargo-build-wasm.yml  cargo-build.yml  cargo-clippy.yml  cargo-doc.yml  cargo-test.yml  make-generate.yml  make-release.yml  update-spec-for-docs.yml  validate-openapi-spec.yml  win-ca-smoke.yml
assets/: in_step.stp
generator/: Cargo.toml
generator/src/: client.rs  functions.rs  lib.rs  main.rs  template.rs  types.rs  types_templates.rs  utils.rs
generator/src/types/: base64.rs  error.rs  example.rs  exts.rs  mod.rs  paginate.rs  phone_number.rs  random.rs
generator/tests/: kittycad.rs.gen
generator/tests/types/: kittycad.rs.gen
kittycad/: Cargo.toml  README.md  kittycad.rs.patch.json
kittycad/src/: ai.rs  api_calls.rs  api_tokens.rs  apps.rs  constant.rs  drawing.rs  executor.rs  file.rs  hidden.rs  lib.rs  meta.rs  methods.rs  ml.rs  modeling.rs  oauth2.rs  oauth_2.rs  orgs.rs  payments.rs  projects.rs  service_accounts.rs  sessions.rs  store.rs  tests.rs  traits.rs  types.rs  unit.rs  users.rs  utils.rs
kittycad/tests/: one_of.json  one_of_tabled.txt  tabled_object.txt  tabled_one_of.txt  win_ca_smoke.rs
openapitor/: Cargo.toml
openapitor/src/: client.rs  functions.rs  lib.rs  main.rs  template.rs  tests.rs
openapitor/src/types/: base64.rs  error.rs  example.rs  exts.rs  mod.rs  multipart.rs  paginate.rs  phone_number.rs  random.rs
openapitor/tests/: commonroom.json  front.json  gusto.v1.yaml  oxide.json  ramp.json  remote.json  twilio.json  websocket.json
openapitor/tests/types/: github.rs.gen  kittycad.account-provider-output.rs.gen  kittycad.async-api-call-output.rs.gen  kittycad.drawing-cmd-output.rs.gen  kittycad.file-density-date-time-override-output.rs.gen  kittycad.rs.gen  kittycad.subscription-tier-type.rs.gen  oxide.digest.rs.gen  oxide.ip-net.rs.gen  oxide.router-route.rs.gen  oxide.rs.gen  oxide.vpc-filewall-rule-target.rs.gen  websocket.rs.gen
openapitor/tests/types/input/: AccountProvider.json  AsyncApiCallOutput.json  DrawingCmd.json  FileDensity.json  ModelingCmd.json  RouterRoute.json  SubscriptionTierType.json  VpcFirewallRuleTarget.json
scripts/: https-server.mjs
scripts/win/: create-local-ca.ps1
types/: Cargo.toml
types/src/: base64.rs  exts.rs  lib.rs
types/tests/: kittycad.rs.gen
