[package]
name = "generator"
version = "0.0.0"
edition = "2018"
license = "MPL-2.0"
description = "An OpenAPI client generator."

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
clap = { version = "^3.2.12", features = ["cargo", "derive", "env", "unicode"] }
data-encoding = "^2.3.2"
http = "^0.2.8"
futures-util = "^0.3.21"
Inflector = "^0.11.4"
log = { version = "0.4", features = ["serde"] }
numeral = "1"
openapiv3 = "1"
proc-macro2 = "1"
quote = "1"
regex = "^1.6"
reqwest = { version = "0.11", default-features = false, features = ["json", "multipart", "rustls-tls"] }
rustfmt-wrapper = "^0.2"
schemars = { version = "0.8", features = ["bigdecimal", "chrono", "url", "uuid1"] }
serde = { version = "1", features = [ "derive" ]}
serde_json = "1"
serde_yaml = "^0.8.25"
slog = "^2.7.0"
slog-async = "^2.7.0"
slog-json = "^2.6.1"
slog-scope = "^4.4.0"
slog-stdlog = "^4.1.1"
slog-term = "^2.9.0"
tokio = { version = "1.20.0", features = ["full"] }
url = { version = "^2.2.2", features = ["serde"] }

[dev-dependencies]
expectorate = "1"
pretty_assertions = "1"
