[package]
name = "openapitor"
version = "0.0.9"
edition = "2018"
license = "MPL-2.0"
description = "An OpenAPI client generator."

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
chrono = { version = "0.4", features = ["serde", "std"], default-features = false }
clap = { version = "4.2.2", features = ["cargo", "derive", "env", "unicode", "wrap_help"] }
data-encoding = "^2.3.2"
http = "^0.2.8"
format_serde_error = "^0.3.0"
futures-util = "^0.3.21"
indexmap = { version = "2.0.0", features = ["serde"] }
Inflector = "^0.11.4"
json-patch = "0.2.6"
log = { version = "0.4", features = ["serde"] }
numeral = "1"
openapiv3 = "1"
phonenumber = "^0.3.1"
proc-macro2 = "1"
quote = "1"
rand = { version = "0.8.5", features = ["small_rng"] }
regex = "^1.6"
reqwest = { version = "0.11", default-features = false, features = ["json", "multipart", "rustls-tls"] }
reqwest-middleware = "0.2.2"
rustfmt-wrapper = "^0.2"
schemars = { version = "0.8", features = ["bigdecimal04", "chrono", "url", "uuid1"] }
serde = { version = "1", features = [ "derive" ]}
serde_json = "1"
serde_yaml = "^0.9.17"
slog = "^2.7.0"
slog-async = "^2.7.0"
slog-json = "^2.6.1"
slog-scope = "^4.4.0"
slog-stdlog = "^4.1.1"
slog-term = "^2.9.0"
thiserror = "1"
url = { version = "^2.2.2", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
once_cell = "1.17.1"

[dev-dependencies]
async-trait = "^0.1.56"
expectorate = "1"
# futures is necessary for test-context
futures = "0.3"
pretty_assertions = "1"
test-context = "^0.1.4"
