[package]
name = "openapitor"
version = "0.0.9"
edition = "2018"
license = "MPL-2.0"
description = "An OpenAPI client generator."

[dependencies]
Inflector = "^0.11.4"
anyhow = { version = "1", features = ["backtrace"] }
chrono = { version = "0.4", features = ["serde", "std"], default-features = false }
clap = { version = "4.5.41", features = ["cargo", "derive", "env", "unicode", "wrap_help"] }
data-encoding = "^2.9.0"
format_serde_error = "^0.3.0"
futures-util = "^0.3.31"
http = "1"
indexmap = { version = "2.10.0", features = ["serde"] }
json-patch = "4.0.0"
log = { version = "0.4", features = ["serde"] }
mime_guess = "2.0.5"
numeral = "1"
once_cell = "1.21.3"
openapiv3 = "2.2.0"
phonenumber = "0.3.7"
proc-macro2 = "1"
quote = "1"
rand = { version = "0.9.2", features = ["small_rng"] }
regex = "^1.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
reqwest-middleware = "0.4"
rustfmt-wrapper = "0.2.1"
schemars = { version = "0.8", features = ["bigdecimal04", "chrono", "url", "uuid1"] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
serde_yaml = "^0.9.30"
slog = "^2.7.0"
slog-async = "^2.7.0"
slog-json = "^2.6.1"
slog-scope = "^4.4.0"
slog-stdlog = "^4.1.1"
slog-term = "^2.9.1"
thiserror = "2"
url = { version = "^2.5.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
async-trait = "^0.1.88"
expectorate = "1"
# futures is necessary for test-context
futures = "0.3"
pretty_assertions = "1"
test-context = "^0.4.1"

[features]
default = ["retry"]
retry = []
