[package]
name = "types"
version = "0.0.0"
edition = "2018"
license = "MPL-2.0"
description = "Generate Rust types for OpenAPI v3 specs."

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
data-encoding = "^2.3.2"
Inflector = "^0.11.4"
numeral = "1"
proc-macro2 = "1"
regex = "^1.6"
rustfmt-wrapper = "^0.2"
schemars = { version = "0.8", features = ["bigdecimal", "chrono", "url", "uuid1"] }
serde = { version = "1", features = [ "derive" ]}
serde_json = "1"
openapiv3 = "1"
quote = "1"

[dev-dependencies]
expectorate = "1"
pretty_assertions = "1"
